--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: vendor
-          key: composer-${{ hasFiles('composer.lock') }}
+          key: composer-${{ hashFiles('composer.lock') }}
 
       - name: Install Composer dependencies
         run: |
