--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -18,7 +18,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '7.4'
-          extension: ctype, bcmath, fileinfo, json, mbstring, openssl, pdo, tokenizer, xml
+          extensions: ctype, bcmath, fileinfo, json, mbstring, openssl, pdo, tokenizer, xml
           coverage: none
 
       - name: Cache Composer Dependencies
